Update GitHub Actions workflow triggers and runner
Removed push and pull_request triggers for the workflow and changed the runner to self-hosted.

--- a/.github/workflows/pack.yml
+++ b/.github/workflows/pack.yml
@@ -13,16 +13,6 @@ defaults:
 
 on:
   workflow_dispatch: {}
-  push:
-    branches:
-      - "main"
-      - "v*-dev"
-    tags:
-      - "v*.*.*"
-  pull_request:
-    branches:
-      - "main"
-      - "v*-dev"
 
 env:
   INPUT_PYTHON_VERSION: 3.11
@@ -34,7 +24,7 @@ env:
 
 jobs:
   pack:
-    runs-on: ubuntu-22.04
+    runs-on: self-hosted
     timeout-minutes: 360
     steps:
       - name: Checkout
